[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/MenuTile.png" type="Texture" id=1]
[ext_resource path="res://Fonts/FFFFORWA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/LevelMenu.gd" type="Script" id=3]
[ext_resource path="res://Sound/BGMusic.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_right = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = -2.52972
margin_top = -0.470276
margin_right = 361.47
margin_bottom = 184.53
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Title"]
margin_left = 91.114
margin_top = 12.8978
margin_right = 267.114
margin_bottom = 43.8978
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0.87451, 1, 1 )
text = "Level Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButtons" type="HBoxContainer" parent="."]
margin_left = 22.315
margin_top = 74.185
margin_right = 326.315
margin_bottom = 108.185
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="LevelButtons"]
margin_left = 52.0
margin_right = 84.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 2 )
text = "     "
flat = true

[node name="Label" type="Label" parent="LevelButtons/1"]
margin_right = 32.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="LevelButtons"]
margin_left = 94.0
margin_right = 126.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 2 )
text = "     "
flat = true

[node name="Label" type="Label" parent="LevelButtons/2"]
margin_right = 32.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Button" parent="LevelButtons"]
margin_left = 136.0
margin_right = 168.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 2 )
text = "     "
flat = true

[node name="Label" type="Label" parent="LevelButtons/3"]
margin_right = 32.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Button" parent="LevelButtons"]
margin_left = 178.0
margin_right = 210.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 2 )
text = "     "
flat = true

[node name="Label" type="Label" parent="LevelButtons/4"]
margin_right = 32.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Button" parent="LevelButtons"]
margin_left = 220.0
margin_right = 252.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 2 )
text = "     "
flat = true

[node name="Label" type="Label" parent="LevelButtons/5"]
margin_right = 32.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 11.2092
margin_top = 148.373
margin_right = 51.2092
margin_bottom = 188.373
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Control"]
margin_right = 62.0
margin_bottom = 28.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/BackButton"]
margin_left = 5.0
margin_top = 4.0
margin_right = 59.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0.87451, 1, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 175.507, 91.7627 )
[connection signal="button_up" from="LevelButtons/1" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="LevelButtons/2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="LevelButtons/3" to="." method="_on_Button3_button_up"]
[connection signal="button_up" from="LevelButtons/4" to="." method="_on_Button4_button_up"]
[connection signal="button_up" from="LevelButtons/5" to="." method="_on_Button5_button_up"]
[connection signal="button_up" from="Control/BackButton" to="." method="_on_BackButton_button_up"]
